# openclaw-sec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/releases/: v0.1.0.md
examples/redacted-lab/: README.md  generate_demo.sh
scripts/: build_skill_bundle.py
skills/openclaw-sec-audit/: SKILL.md
skills/openclaw-sec-audit/resources/: openclaw-sec.pyz  run_audit.sh
src/openclaw_sec/: utils.py
src/openclaw_sec/detectors/: config_scan.py
tests/: test_openclaw_sec.py
